# puc-rate-tracker

./: .gitignore  .railwayignore  CLAUDE.md  ENRICHMENT_PLAN.md  PROBLEMS.md  Procfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: rate_case_types.yaml  sources.yaml  utility_aliases.yaml
data/: puc_rate_cases.db
docs/: methodology.md
outreach/: research_notes.md  targets.json
outreach/email_templates/: client.md  media.md  researcher.md
outreach/pitch_materials/: one_pager.md  sample_data.json
scripts/: seed_data.py
src/: cli.py
src/dashboard/: app.py
src/export/: exporter.py
src/extractors/: rate_case_parser.py
src/normalization/: cross_linker.py  utilities.py
src/scrapers/: ca_cpuc.py  ct_pura.py  egrid.py  eia_860.py  eia_861.py  ga_psc.py  in_iurc.py  mo_psc.py  or_puc.py  pa_puc.py  wa_utc.py
src/storage/: database.py
src/validation/: quality.py  schemas.py
tests/: conftest.py  test_database.py  test_enrichment.py  test_extractor.py  test_normalization.py  test_quality.py  test_schemas.py  test_scrapers.py
